Fixed an issue with tooltips not showing up.

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -24,7 +24,3 @@ body {
   -moz-osx-font-smoothing: grayscale;
   user-select: none;
 }
-
-img {
-  pointer-events: none;
-}
